projects/primus-tt/backend/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: primus-tt-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: registry.coherent.in/primustt-backend:452
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: backend
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 8081
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
