projects/primus-tt/backend/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  namespace: primus-tt-dev
spec:
  ports:
    - port: 8019
      protocol: TCP
      targetPort: 8019
  selector:
    app: backend
