projects/primus-tt/backend/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: primus-tt-dev
  labels:
    app: backend
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - primustt-backend-dev.coherent.in
      secretName: backend-tls
  rules:
    - host: "primustt-backend-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8019
